# cpputilities

./: CMakeLists.txt  README.md
include/: abort.h  abort.hpp  macros.hpp  namespace.hpp
src/: abort.cc  abort.cpp
test/: test_common.cpp  test_macros.cpp
